# my_aio_template_2

./: .env.dist  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bot/: __init__.py  __main__.py
bot/callbacks/: __init__.py  classes.py  funcs.py
bot/filters/: __init__.py  is_admin.py  is_email.py
bot/handlers/: __init__.py
bot/handlers/admin/: __init__.py  dice.py
bot/handlers/user/: __init__.py  add_address.py  addresses.py  aio_example_fsm.py  echo.py  inline_url.py  nums_fab_cb.py  starts.py
bot/keyboards/: inline.py  reply.py
bot/middlewares/: __init__.py  database_md.py
bot/states/: __init__.py  add_address_state.py  aio_example.py  numbers_fab.py
bot/utils/: __init__.py  bot_startup_shutdown.py  redis.py  set_commands.py
database/: __init__.py  engine.py  models.py  orm.py
database/migrations/: env.py
database/migrations/versions/: 05d1234c86a3_init.py
database/redis/: __init__.py  redis.conf
