[tool.poetry]
name = "my-aio-template-2"
version = "0.1.0"
description = "My template for creating Telegram bots based on aiogram"
authors = ["Marsickat <ruslan.marsikcat@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^3.0.0"
pydantic-settings = "^2.0.3"
redis = "^5.0.0"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
emoji = { version = "^2.8.0", optional = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
